# toy-robot

./: .gitignore  README.md  main.py  problem.md  pyproject.toml
src/: commands.py  data_classes.py  robot.py  simulator.py  table.py
tests/: conftest.py  test_commands.py  test_integration.py  test_robot.py  test_simulator.py  test_table.py
toy_robot/: __main__.py  cli.py  commands.py  data_classes.py  robot.py  simulator.py  table.py
