[project]
name = "toy-robot"
version = "0.1.0"
description = "Toy robot simulator"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Simon Harris", email = "simonjharris90@gmail.com" },
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.mypy]
strict = true
exclude = [".venv"]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
omit = ["tests/*"]
